last edits to ge

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -92,7 +92,7 @@ The program is a prototype for many programs in place today.\footnote{Programs i
 
 We confront a fundamental problem that arises in evaluating social programs. In our data, the oldest experimental subject is in his mid 30s. Yet we want to examine life-cycle returns. To do so, we supplement experimental data with non-experimental data on comparable older cohorts.
 
-We forecast the life-cycle benefits and costs of the program using economic theory to guide construction of later life outcomes using non-experimental data.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g.,\ \citealp{Prentice_1989_Surrogate_SiM}). However, as we note below, exogeneity is an integral part of the models we estimate, although it is not considered in the statistics literature. That literature does not provide testable predictions to validate the forecasts, which we produce using structural models.} We compute internal rates of return and benefit-cost ratios that encompass the large array of benefits and costs generated. We account for model estimation and forecasting error and the welfare cost of taxation required to fund the program. Our estimates are robust when subject to extensive sensitivity analyses.
+We forecast the life-cycle benefits and costs of the program using economic theory to guide construction of later life outcomes using non-experimental data.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g.,\ \citealp{Prentice_1989_Surrogate_SiM}). However, as we note below, exogeneity is an integral part of the models we estimate, although it is not considered in the statistics literature. That literature does not provide testable predictions to validate the forecasts, which we produce using structural models.} We compute internal rates of return and benefit/cost ratios that encompass the large array of benefits and costs generated. We account for model estimation and forecasting error and the welfare cost of taxation required to fund the program. Our estimates are robust when subject to extensive sensitivity analyses.
 
 This paper constructs a synthetic cohort from non-experimental samples that approximates the experimental sample in post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on intermediate inputs changed by treatment that are measured in both experimental and non-experimental samples, but the production functions are not affected by treatment.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. They do not construct out of sample forecasts.} We test invariance of the production functions using non-experimental samples that overlap, in part, with the experimental sample. We can forecast experimental treatment effects using the estimated production functions applied to overlapping non-experimental data.
 
@@ -104,7 +104,7 @@ The paper proceeds in the following way. Section~\ref{section:background} descri
 
 The Carolina Abecedarian Project and the Carolina Approach to Responsive Education (ABC/CARE) was an enriched childcare program that targeted the early years of disadvantaged, predominately African-American children in Chapel Hill, Durham, and Raleigh in North Carolina.\footnote{Both ABC and CARE were designed and implemented by researchers at the Frank Porter Graham Center of the University of North Carolina in Chapel Hill.} Appendix~\ref{appendix:background} describes the program in detail. We summarize its main features in the text.
 
-The goal of these programs was to enhance the life skills of disadvantaged children. Both programs supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task orientation, the ability to communicate, independence, and pro-social behavior.\footnote{\citet{Sparling_1974_Synth_Edu_Infant_SPEECH, Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.} The programs provided health screenings to treatment group members, but costs of health care were borne by parents.
+The goal of these programs was to enhance the life skills of disadvantaged children. Both programs supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task orientation, the ability to communicate, independence, and pro-social behavior.\footnote{\citet{Sparling_1974_Synth_Edu_Infant_SPEECH, Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.} The program provided free health screenings to treatment-group members, with the costs of follow-ups borne by the parents.
 
 ABC recruited four cohorts of children born between 1972 and 1976. CARE recruited two cohorts of children, born between 1978 and 1980. For both programs, families of potential participants were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score on a childhood risk index.\footnote{See  Appendix~\ref{app:eligibility-pop} for details on the construction of the index. It weights the following variables (listed from the most to the least important according to the index): maternal and paternal education, family income, father's presence at home, lack of maternal relatives in the area, siblings behind appropriate grade in school, family on welfare, father in unstable job, low maternal IQ, low siblings' IQ, social agency indicates that the family is disadvantaged, one or more family members has sought a form of professional help in the last three years, and any other special circumstance detected by program staff.}
 
@@ -114,7 +114,7 @@ In ABC, the initial sample consisted of 120 families. For reasons discussed in A
 
 The experiment collects annual observations on a variety of outcomes from ages 0 to 15. For both programs, data were annually collected on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are unavailable for both ABC and CARE.} In addition, there is information from administrative criminal records, a physician-administered medical survey, and a set of medical tests when the subjects were in their mid 30s.\footnote{See  Appendix~\ref{appendix:data} for a more comprehensive description of the data. There, we document the balance in observed baseline characteristics across the treatment and control groups after dropping the individuals for whom we have no crime or health information. There is substantial attrition for these data collections. The methodology that we propose addresses missing data in either of these two outcome categories.}
 
-An important feature of the program is that many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\% respectively). The alternative arrangements were generally lower quality than ABC/CARE.\footnote{See Appendix~\ref{appendix:tetanus} for details on these alternatives.} In our main analysis we compare treatment- and control-group children, irrespective of take-up of alternatives. In Section~\ref{section:cbaresultscont}, we disaggregate our analysis to distinguish treatment effects by control group. We now formalize our forecast procedure. 
+An important feature of the program is that many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\% respectively). The alternative arrangements were generally lower quality than ABC/CARE.\footnote{See Appendix~\ref{appendix:tetanus} for details on these alternatives.} In our main analysis we compare treatment- and control-group children, irrespective of take-up of alternatives. In Section~\ref{section:cbaresultscont}, we disaggregate our analysis to distinguish treatment effects by counterfactual scenario. We now formalize our forecast procedure. 
 
 \section{Forecasting Life-cycle Costs and Benefits: Method} \label{section:cbamethodology}
 
@@ -122,7 +122,7 @@ We now present our forecasting method in formal terms. For specificity, we focus
 
 $W=1$ indicates that parents referred to the program participate in the randomization protocol. $W=0$ indicates otherwise. $R$ indicates randomization into treatment ($R = 1$) or control ($R = 0$). $D$ indicates whether or not a family attends the program. $D = R$ implies compliance with the initial randomization protocol. Lower case variables $d$ and $r$ denote realizations of these random variables.
 
-Individuals are eligible to participate in the program if their baseline background variables $\bm{B}\in\mathcal{B}_0$, where $\mathcal{B}_0$ is the set of scores on the risk index that determines program eligibility. Because all of the eligible people with the option to participate choose to do so $(W=1\text{, and } D=R)$, we can safely interpret the treatment effects generated by the experiment as average treatment effects for the population for the eligible population ($\bm{B}\in\mathcal{B}_0$) and not just mean treatment effects for the treated.\footnote{All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Our conversations with the program staff indicate that virtually all referred mothers attended and agreed to participate in the initial randomization \citep{Ramey-etal_2012-ABC}.}
+Individuals are eligible to participate in the program if their baseline background variables $\bm{B}\in\mathcal{B}_0$, where $\mathcal{B}_0$ is the set of scores on the risk index that determines program eligibility. Because all of the eligible people with the option to participate choose to do so $(W=1\text{, and } D=R)$, we can safely interpret the treatment effects generated by the experiment as average treatment effects for the eligible population ($\bm{B}\in\mathcal{B}_0$) and not just mean treatment effects for the treated.\footnote{All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Our conversations with the program staff indicate that virtually all referred mothers attended and agreed to participate in the initial randomization \citep{Ramey-etal_2012-ABC}.}
 
 Define $\bm{Y}^1_a$ as the outcome vector at age $a$ for the treated. $\bm{Y}^0_a$ is the age-$a$ outcome vector for the controls. At age $a$ the vector of average treatment effects for the population for which $\bm{B}\in\mathcal{B}_0$ is
 
@@ -137,9 +137,9 @@ Randomization identifies this parameter in the experimental sample. A principal 
 \end{eqnarray}
 where $\phi^d_{k,a}\left( \cdot, \cdot \right)$ is a structural production relationship mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ holding error term $\varepsilon^d_{k,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory} for discussions.} $ \bm{B}_k$ are baseline variables not affected by treatment. $\bm{X}^d_{k,a}$ are variables potentially affected by treatment. $\bar{A}$ is the oldest age considered in our analysis.
 
-The relationship between inputs $\bm{X}^d_{k,a}, \bm{B}_k$ and outputs $Y^d_{k,a}$ can differ between experimental and non-experimental samples. The model characterizes the outcomes of the two treatment regimes in any sample, including the non-experimental sample, even though there are no empirical counterparts for those counterfactuals. Our analysis consists of providing conditions for identifying and estimating $\phi^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental samples. The key condition is that there are differences in the technologies across treatment regimes given the production inputs: $\phi^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) = \phi_{k,a} (\bm{X}_{k,a}, \bm{B}_k)$ and $\varepsilon^d_{k,a} = \varepsilon_{k,a} d \in \{0,1\}$. \textbf{[Typist: George, it looks like he wants this to be equation 3, but I can't tell where the inline math ends and the equation begins]}. This condition is testable in the available experimental sample. Specifically, we adopt the following procedure for all outcomes:
+The relationship between inputs $\bm{X}^d_{k,a}, \bm{B}_k$ and outputs $Y^d_{k,a}$ can differ between experimental and non-experimental samples. The model characterizes the outcomes of the two treatment regimes in any sample, including the non-experimental sample, even though there are no empirical counterparts for those counterfactuals. Our analysis consists of providing conditions for identifying and estimating $\phi^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental samples. The key condition is that there are no differences in the technologies across treatment regimes given the production inputs: $\phi^d_{k,a} (\bm{X}^d_{k,a}, \bm{B}_k) = \phi_{k,a} (\bm{X}_{k,a}, \bm{B}_k)$ and $\varepsilon^d_{k,a} = \varepsilon_{k,a}$ for $d \in\{0,1\},  k\in\{e,n\}, \  a\in\{1,\dots,\bar{A}\}$. \textbf{[Typist: George, it looks like he wants this to be equation 3, but I can't tell where the inline math ends and the equation begins]}. This condition is testable in the available experimental sample. Specifically, we adopt the following procedure for all outcomes:
 
-\textbf{[JJH: Jorge, do we test equality of distributions of $\varepsilon^1_{k,a}$ and $\varepsilon^0_{k,a}$?]}
+\textbf{[JJH: Jorge, do we test equality of distributions of $\varepsilon^1_{k,a}$ and $\varepsilon^0_{k,a}$?] [JLG: I am working on it.]}
 
 \begin{enumerate}
 \item \textbf{Construct a Synthetic Cohort.} Select an eligible non-experimental sample ($\bm{B}_n \in \bm{B}_0$).
