--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -2,7 +2,7 @@ This paper examines the impacts by gender of two closely related and influential
 
 ABC/CARE was conducted in Chapel Hill, North Carolina for a sample of children born between 1972 and 1980. It was a pioneering program that focused on the early years of disadvantaged children. It is a template for many current and proposed early childhood programs.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: the Infant Health and Development Program (IHDP)---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} It started at 8 weeks of age and continued through age 5. Treatment and control children were followed through their mid 30s, with data collected on multiple dimensions of human development with over 100 reported program outcomes.\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Anderson_2008_JASA,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Heckman_2006_Science}, \citet{Anderson_2008_JASA} and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} note separate treatment effects by gender. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} only use health data, and find that men are more affected by ABC/CARE than women. \citet{Anderson_2008_JASA} constructs factors using data up to the age-21 collection and finds that women benefit more than men, but does not use the crime, health, and employment data used in our paper.}
 
-Table~\ref{table:summary} motivates our focus on gender differences in the treatment effects of ABC/CARE. To avoid cherry-picking and reporting outcomes with significant treatment effects or significant gender differences, we analyze aggregates. Consider employment, for which we observe four outcomes (e.g., labor income at ages 21 and 30). In the control group, all of  the averages of the outcomes are larger for males if compared to females. This is denoted by the fraction $1.000$. We provide an exact, non-parametric test in which the null hypothesis is that the joint distribution of these four outcomes is the same for males and females. The $p$-value for employment is $0.117$.\footnote{Details on the inference on the fraction and the exact, non-parametric test are provided below.} The analogous statistics for the treatment group yield a fraction of $0.75$ and a $p$-value of $0.080$. This indicates that treatment reduces the gaps between males and females. The treatment-control difference between the treatment male-female gap and control male-female gap is $0.25$. However, the post-treatment joint distribution of employment outcomes still differs according to our exact, non-parametric test. Table~\ref{table:summary} reveals that the pattern described for employment generally holds for all of the outcomes that we study.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is a common practice. Examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.}
+Table~\ref{table:summary} motivates our focus on gender differences in the treatment effects of ABC/CARE. To avoid cherry-picking and reporting outcomes with significant treatment effects or significant gender differences, we analyze aggregates. Consider employment, for which we observe four outcomes (e.g., labor income at ages 21 and 30). In the control group, all of  the averages of the outcomes are larger for males if compared to females. This is denoted by the fraction $1.000$. We provide an exact, non-parametric test in which the null hypothesis is that the distribution of employment is the same for males and females. The $p$-value is $0.117$.\footnote{Details on the inference on the fraction and the exact, non-parametric test are provided below.} The analogous statistics for the treatment group yield a fraction of $0.75$ and a $p$-value of $0.080$. This indicates that treatment reduces the gaps between males and females. The treatment-control difference between the treatment male-female gap and control male-female gap is $0.25$. However, the post-treatment joint distribution of employment still differs according to our exact, non-parametric test. Table~\ref{table:summary} reveals that the pattern described for employment generally holds for the outcomes that we study.\footnote{This finding of females benefitting more than males (except in health) is consistent with previous work studying the gender differences in early childhood education. We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is a common practice. Examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Anderson_2008_JASA,Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.}
 
 \begin{sidewaystable}[!htbp] 
 \centering
@@ -18,9 +18,9 @@ Table~\ref{table:summary} motivates our focus on gender differences in the treat
 \end{threeparttable}
 \end{sidewaystable}
 
-While females benefit more than males from treatment resulting in a reduction in the male-female gap, males also benefit from the program substantially. We describe the benefits of the program using parametric and non-parametric aggregates of outcomes across the life cycle. All measures consistently show beneficial effects of the program.
+While females benefit more than males from treatment resulting in a reduction in the male-female gap, males also benefit from the program substantially. We describe the benefits of the program using parametric and non-parametric inference on aggregates of outcomes across the life cycle. All measures consistently show beneficial effects of the program.
 
-The differential treatment effects by gender arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal education and IQ are lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained compared to their male counterparts for whom more fathers are present.\footnote{We do not have precise measures of the quality of individual alternative preschools, although we do know that girls were more disadvantaged. This implies that their families would have fewer resources to spend on higher-quality alternative preschools.} Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
+The differential treatment effects by gender arise because control-group girls grow up in less favorable environments compared to control-group boys. Specifically, in the homes of girls, fewer fathers are present and maternal human capital are lower. Girls in the control group who stay at home ($27\%$ of the control-group girls), were raised in more disadvantaged environments. Girls who went to preschools other than ABC/CARE ($73\%$ of the control-group girls), likely went to lower-quality preschools because their families were more resource constrained compared to their male counterparts for whom more fathers are present.\footnote{We do not have precise measures of the quality of individual alternative preschools, although we do know that girls were more disadvantaged. This implies that their families would have fewer resources to spend on higher-quality alternative preschools.} Thus, girls benefited more from treatment because they would have otherwise grown up in more disadvantaged environments.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev} show that the quality of the available alternatives was of lower quality than the treatment offered through ABC/CARE. We supplement this evidence with historical records showing that even the alternatives that followed state and federal standards of the era were of lower quality than ABC/CARE as measured by concrete measures such as staff-child ratios. We provide more detail on the quality of ABC/CARE and the alternative options in Section~\ref{sec:data} and Appendix~\ref{appendix:background}.}
 
 There is an important difference in the within-gender take-up of alternatives. Among control-group girls, the more disadvantaged stayed at home. Among control-group boys, the relatively advantaged boys are more likely to stay at home instead of attending the lower-quality alternative childcares. \textbf{[JJH: Is this associated with lower mother's working?][JLG: We are providing a whole description of this in Section 5.]} These results are confirmed when we explicitly account for control group substitution. Boys benefit more from ABC/CARE when compared to alternative preschools given their relatively better home environments. Girls benefit more from ABC/CARE when compared to home-based care, given that those who stay at home are more disadvantaged.
 
