--- a/output/income-inputs-description.tex
+++ b/output/income-inputs-description.tex
@@ -5,18 +5,11 @@
 & Control & Average & Control & Average  \\
 & Mean & Treatment Effect & Mean & Treatment Effect  \\
 \midrule
-PIAT Scores & $     95.82 $  & $      4.16 $ & $     95.04 $ & $      1.97 $ \\
-\quad (ages 5-7)                    &                                               & ($      2.53 $) & & ($       2.44 $) \\
-High School Graduation & $      0.51 $ & $      0.25 $ & $      0.61 $ & $      0.07 $ \\
-\quad (age 30)                      &                                               & ($      0.12 $) & & ($      0.12 $) \\
-College Graduation & $      0.08 $ & $      0.13 $ & $      0.12 $ & $      0.17 $ \\
-\quad (age 30)                      &                                               & ($      0.09 $) & & ($      0.11 $) \\
-Years of Education & $     11.76 $ & $      2.14 $ & $     12.90 $ & $      0.53 $ \\
-\quad (age 30)                      &                                               & ($      0.62 $) & & ($      0.51 $) \\
-Labor Income  & $ 10,847.45 $ & $  1,741.47 $ & $ 17,025.60 $ & $ -1,671.96 $ \\
-\quad 2016 USD (age 21)                      &                                               & ($  2,429.99 $) & & ($  3,345.15 $) \\
-Labor Income  & $ 23,443.42 $ & $  2,547.50 $ & $ 29,340.31 $ & $ 19,809.74 $ \\
-\quad 2016 USD (age 30)                      &                                               & ($  5,833.99 $) & & ($ 14,795.66 $) \\
+PIAT Scores & $     95.63 $  & $      \textbf{4.92} $ & $     93.46 $ & $      \textbf{7.70} $ \\
+High School Graduation & $      0.51 $ & $     \textbf{0.25} $ & $      0.61 $ & $      0.07 $ \\
+College Graduation & $      0.08 $ & $      0.13 $ & $      0.12 $ & $      \textbf{0.17} $ \\
+Years of Education & $     11.76 $ & $      \textbf{2.14} $ & $     12.90 $ & $      \textbf{0.66} $ \\
+Labor Income at 30  & $ 23,443.42 $ & $  2,547.50 $ & $ 29,340.31 $ & $\textbf{19,809.74} $ \\
 \bottomrule
 \end{tabular}
 % This file produced using scripts/abccare/cba/labor/income-inputs-description.do
